--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,6 @@
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    background-image: url('todolist.jpeg');
+    background-image: url('todo-lists_1920.jpg');
     border-image: fill 0 linear-gradient(#0001, #000);
     background-repeat: no-repeat;
     background-size: cover;
